[gd_scene load_steps=16 format=2]

[ext_resource path="res://ui/Inventory.png" type="Texture" id=1]
[ext_resource path="res://script/Inventory.gd" type="Script" id=2]
[ext_resource path="res://art/Wand.png" type="Texture" id=3]
[ext_resource path="res://art/TripleWand.png" type="Texture" id=4]
[ext_resource path="res://art/BouncingWand.png" type="Texture" id=5]
[ext_resource path="res://art/PrismaticWand.png" type="Texture" id=6]
[ext_resource path="res://art/PhantomProjectile.png" type="Texture" id=7]
[ext_resource path="res://art/ecoprojectile.png" type="Texture" id=8]
[ext_resource path="res://art/WaveProjectile.png" type="Texture" id=9]
[ext_resource path="res://art/MineProjectile.png" type="Texture" id=10]
[ext_resource path="res://ui/box select.png" type="Texture" id=11]
[ext_resource path="res://Music and Fonts(Misc.)/m5x7.tres" type="DynamicFontData" id=12]

[sub_resource type="Animation" id=1]
resource_name = "SlideIn"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Inventory:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 160, -55 ), Vector2( 160, 85 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "SlideOut"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Inventory:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 85 ), Vector2( 160, -55 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 15
font_data = ExtResource( 12 )

[node name="Inventory" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SlideIn = SubResource( 1 )
anims/SlideOut = SubResource( 2 )

[node name="Inventory" type="Sprite" parent="."]
light_mask = -2147483648
position = Vector2( 160, -57 )
texture = ExtResource( 1 )

[node name="Conduits" type="Node2D" parent="Inventory"]

[node name="Conduit1" type="TextureButton" parent="Inventory/Conduits"]
light_mask = -2147483647
margin_left = -81.0
margin_top = -22.0
margin_right = -67.0
margin_bottom = -4.0
mouse_filter = 1
action_mode = 0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="Inventory/Conduits/Conduit1"]
position = Vector2( 7, 9 )

[node name="Label" type="Label" parent="Inventory/Conduits/Conduit1"]
margin_left = -13.0
margin_top = -13.0
margin_right = 28.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Charged"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Conduit2" type="TextureButton" parent="Inventory/Conduits"]
light_mask = -2147483647
margin_left = -34.0
margin_top = -22.0
margin_right = -15.0
action_mode = 0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="Inventory/Conduits/Conduit2"]
position = Vector2( 9, 9 )

[node name="Label2" type="Label" parent="Inventory/Conduits/Conduit2"]
margin_left = -8.0
margin_top = -12.0
margin_right = 33.0
margin_bottom = 2.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Triple"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Conduit3" type="TextureButton" parent="Inventory/Conduits"]
light_mask = -2147483647
margin_left = -83.0
margin_top = 4.0
margin_right = -66.0
margin_bottom = 26.0
action_mode = 0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="Inventory/Conduits/Conduit3"]
position = Vector2( 9, 10 )

[node name="Label3" type="Label" parent="Inventory/Conduits/Conduit3"]
margin_left = -11.0
margin_top = -14.0
margin_right = 30.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Bouncy"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Conduit4" type="TextureButton" parent="Inventory/Conduits"]
light_mask = -2147483647
margin_left = -34.0
margin_top = 7.0
margin_right = -16.0
margin_bottom = 29.0
action_mode = 0
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="Inventory/Conduits/Conduit4"]
position = Vector2( 9, 10 )

[node name="Label4" type="Label" parent="Inventory/Conduits/Conduit4"]
margin_left = -10.0
margin_top = -11.0
margin_right = 31.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Prism"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projectiles" type="Node2D" parent="Inventory"]

[node name="Projectile1" type="TextureButton" parent="Inventory/Projectiles"]
margin_left = 15.0
margin_top = -20.0
margin_right = 31.0
margin_bottom = -2.0
action_mode = 0
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="Inventory/Projectiles/Projectile1"]
position = Vector2( 8, 9 )

[node name="Label5" type="Label" parent="Inventory/Projectiles/Projectile1"]
margin_left = -12.0
margin_top = -11.0
margin_right = 30.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Eco"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projectile2" type="TextureButton" parent="Inventory/Projectiles"]
margin_left = 66.0
margin_top = -20.0
margin_right = 82.0
margin_bottom = -2.0
action_mode = 0
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="Inventory/Projectiles/Projectile2"]
position = Vector2( 8, 9 )

[node name="Label6" type="Label" parent="Inventory/Projectiles/Projectile2"]
margin_left = -13.0
margin_top = -11.0
margin_right = 30.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Phantom"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projectile3" type="TextureButton" parent="Inventory/Projectiles"]
margin_left = 19.0
margin_top = 7.0
margin_right = 35.0
margin_bottom = 26.0
action_mode = 0
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="Inventory/Projectiles/Projectile3"]
position = Vector2( 8, 10 )

[node name="Label7" type="Label" parent="Inventory/Projectiles/Projectile3"]
margin_left = -14.0
margin_top = -11.0
margin_right = 36.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Knockback"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projectile4" type="TextureButton" parent="Inventory/Projectiles"]
margin_left = 69.0
margin_top = 7.0
margin_right = 85.0
margin_bottom = 26.0
action_mode = 0
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="Inventory/Projectiles/Projectile4"]
margin_left = -16.0
margin_top = -11.0
margin_right = 34.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Bomb"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="Inventory/Projectiles/Projectile4"]
position = Vector2( 8, 10 )

[node name="Button" type="TextureButton" parent="Inventory"]
margin_left = -22.0
margin_top = 35.0
margin_right = 23.0
margin_bottom = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConduitSelect" type="Sprite" parent="Inventory"]
visible = false
position = Vector2( -72, -22 )
texture = ExtResource( 11 )

[node name="ProjectileSelect" type="Sprite" parent="Inventory"]
visible = false
position = Vector2( -20, -24 )
texture = ExtResource( 11 )
[connection signal="pressed" from="Inventory/Conduits/Conduit1" to="." method="_on_Conduit1_toggled"]
[connection signal="pressed" from="Inventory/Conduits/Conduit2" to="." method="_on_Conduit2_toggled"]
[connection signal="pressed" from="Inventory/Conduits/Conduit3" to="." method="_on_Conduit3_toggled"]
[connection signal="pressed" from="Inventory/Conduits/Conduit4" to="." method="_on_Conduit4_toggled"]
[connection signal="pressed" from="Inventory/Projectiles/Projectile1" to="." method="_on_Projectile1_pressed"]
[connection signal="pressed" from="Inventory/Projectiles/Projectile2" to="." method="_on_Projectile2_pressed"]
[connection signal="pressed" from="Inventory/Projectiles/Projectile3" to="." method="_on_Projectile3_pressed"]
[connection signal="pressed" from="Inventory/Projectiles/Projectile4" to="." method="_on_Projectile4_pressed"]
[connection signal="pressed" from="Inventory/Button" to="." method="set_open" binds= [ false ]]
